# role-lead-gen

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
apps/api/: alembic.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 658938ae7442_initial_schema.py
apps/api/data/output/: run_20260525_1320.json  run_20260525_1323.json  run_20260525_1334.json  run_20260525_1340.json
apps/api/src/leadgen/: config.py  db.py
apps/api/src/leadgen/cli/: main.py
apps/api/src/leadgen/enrichment/: llm_research.py
apps/api/src/leadgen/models/: __init__.py  company.py  contact.py  interaction.py  job.py  lead.py  message.py
apps/api/src/leadgen/observability/: llm_metering.py  logging.py
apps/api/src/leadgen/reasoning/: icp_matcher.py  llm.py  personalizer.py  scorer.py
apps/api/src/leadgen/reasoning/prompts/: analyze_v1.py  draft_v1.py  icp_match_v1.py  score_v1.py
apps/api/src/leadgen/repositories/: lead_repo.py
apps/api/src/leadgen/schemas/: analysis.py  draft.py  icp.py  lifecycle.py  profile.py  score.py
apps/api/src/leadgen/services/: pipeline.py
apps/api/tests/unit/: test_profile.py  test_reasoning.py  test_schemas.py
data/seeds/: target_companies.csv  test_2.csv
profiles/: pranay_fde_gtm.yaml
